Swap snake_case to camelCase
